--- a/falsevisir-jupyter.ipynb
+++ b/falsevisir-jupyter.ipynb
@@ -42,11 +42,8 @@
    "outputs": [],
    "source": [
     "#%% Warp images\n",
-    "vi_image, ir_image = warp_images(vi_image, ir_image)\n",
-    "\n",
-    "print(info(vi_image))\n",
-    "print(info(ir_image))\n",
-    "show_images((vi_image, ir_image))"
+    "vi_image, ir_image = warp_images(vi_image, ir_image, show=True)\n",
+    "\n"
    ]
   },
   {
