--- a/falsevisir_jupyter.ipynb
+++ b/falsevisir_jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -11,6 +11,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'downsize': 400,\n",
+      " 'extract_features': {'method': 'HARRIS',\n",
+      "                      'min_distance': 1,\n",
+      "                      'patch_size': 50,\n",
+      "                      'threshold_rel': 1e-07},\n",
+      " 'irr_weight': 0.5,\n",
+      " 'match': {'max_distance': 200},\n",
+      " 'model_robust_param_limits': [[[-10, -1, -100],\n",
+      "                                [-1, -2, -100],\n",
+      "                                [-0.1, -0.02, 0]],\n",
+      "                               [[10, 1, 100], [1, 2, 100], [0.1, 0.02, 2]]],\n",
+      " 'preprocess_images': {'blur_sigma': 1,\n",
+      "                       'edge': False,\n",
+      "                       'edge_sigma': 2,\n",
+      "                       'equalize': False,\n",
+      "                       'high_threshold': 0.1,\n",
+      "                       'low_threshold': 0.05,\n",
+      "                       'normalize': 0},\n",
+      " 'ransac': {'max_trials': 10000, 'min_samples': 5, 'residual_threshold': 10}}\n",
+      "{'downsize': 400,\n",
+      " 'extract_features': {'method': 'HARRIS',\n",
+      "                      'min_distance': 1,\n",
+      "                      'patch_size': 50,\n",
+      "                      'threshold_rel': 1e-07},\n",
+      " 'irr_weight': 0.5,\n",
+      " 'match': {'max_distance': 200},\n",
+      " 'model_robust_param_limits': [[[-10, -1, -100],\n",
+      "                                [-1, -2, -100],\n",
+      "                                [-0.1, -0.02, 0]],\n",
+      "                               [[10, 1, 100], [1, 2, 100], [0.1, 0.02, 2]]],\n",
+      " 'preprocess_images': {'blur_sigma': 1,\n",
+      "                       'edge': False,\n",
+      "                       'edge_sigma': 2,\n",
+      "                       'equalize': False,\n",
+      "                       'high_threshold': 0.1,\n",
+      "                       'low_threshold': 0.05,\n",
+      "                       'normalize': 0},\n",
+      " 'ransac': {'max_trials': 10000, 'min_samples': 5, 'residual_threshold': 10}}\n",
       "shape: (582, 600, 3) dtype: float64 min--max: 0.000--1.000\n",
       "shape: (1311, 1287, 3) dtype: float64 min--max: 0.220--1.000\n",
       "shape: (582, 600, 3) dtype: float64 min--max: 0.000--1.000\n",
@@ -33,7 +71,9 @@
    "source": [
     "from falsevisir import *\n",
     "from pprint import pprint\n",
-    "    \n",
+    "\n",
+    "pprint(CFG)\n",
+    "\n",
     "CFG['preprocess_images']['blur_sigma'] = 1\n",
     "CFG['preprocess_images']['normalize'] = 0\n",
     "\n",
@@ -41,9 +81,9 @@
     "\n",
     "CFG['extract_features']['patch_size'] = CFG['downsize'] // 8\n",
     "\n",
-    "# pprint(CFG)\n",
+    "pprint(CFG)\n",
     "\n",
-    "im_paths = \"/home/m/git/falsevisir/samples/vis_samples/a002_palette.jpg\", \"/home/m/git/falsevisir/samples/ir_samples/a002_s002__TL.jpg\"\n",
+    "im_paths = \"samples/vis_samples/a002_palette.jpg\", \"samples/ir_samples/a002_s002__TL.jpg\"\n",
     "vi_path, ir_path = [Path(fp) for fp in im_paths]\n",
     "\n",
     "#%% Load images\n",
