--- a/falsevisir_jupyter.ipynb
+++ b/falsevisir_jupyter.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -24,19 +22,32 @@
     "CFG['extract_features']['patch_size'] = CFG['downsize'] // 8\n",
     "\n",
     "# Load images\n",
-    "im_paths = '/home/m/Y/APOLLO/2022/J2206/a349_J2206__TL_90.png', '/home/m/Y/SKENY/VIS/J2206 3200.tif'\n",
     "\n",
     "\n",
-    "vi_path, ir_path = [Path(fp) for fp in reversed(im_paths)]\n",
+    "im_paths = \"\"\"\n",
+    "/home/m/Y/SKENY/VIS/J1919 4000.tif\n",
+    "/home/m/Y/APOLLO/2019/J1919/a091_J1919__TF.png\n",
+    "\"\"\".strip().splitlines()\n",
+    "print(im_paths)\n",
+    "\n",
+    "vi_path, ir_path = [Path(fp) for fp in im_paths]\n",
     "\n",
     "vi_image, ir_image = [load_image(fp) for fp in (vi_path, ir_path)]\n",
     "print(\"-------------------- Loaded images --------------------\")\n",
     "print(info(vi_image))\n",
     "print(info(ir_image))\n",
-    "show_images((vi_image, ir_image))\n",
-    "\n",
+    "show_images((vi_image, ir_image))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "# Resize to same height\n",
-    "\n",
     "vi_image, ir_image = resize_images((vi_image, ir_image))\n",
     "print(\"-------------------- Resized images --------------------\")\n",
     "print(info(vi_image))\n",
@@ -55,20 +66,25 @@
    },
    "outputs": [],
    "source": [
-    "''' Find features without edge detection '''\n",
+    "''' Change config '''\n",
     "\n",
-    "CFG['preprocess_images']['edge'] = 0           # worse results\n",
-    "CFG['preprocess_images']['normalize'] = 1      # no effect?\n",
-    "CFG['preprocess_images']['blur_sigma'] = 1     # reduce noise -> optimum ~ 1 ?\n",
-    "CFG['preprocess_images']['equalize'] = 0       # no effect?\n",
-    "\n",
-    "CFG['downsize'] = 800                          # higher -> longer warping, optimum ~ 500\n",
-    "\n",
-    "CFG['ransac']['residual_threshold'] = 20       # higher -> more good matches, optimum ~ 10\n",
+    "CFG['preprocess_images']['edge'] = 0\n",
+    "CFG['preprocess_images']['normalize'] = 1\n",
+    "CFG['preprocess_images']['blur_sigma'] = 2\n",
+    "CFG['preprocess_images']['equalize'] = 0\n",
     "\n",
     "#%% Warp images\n",
-    "vi_image_w, ir_image_w = warp_images(vi_image, ir_image, show=True, **CFG)\n",
-    "\n",
+    "vi_image_w, ir_image_w = warp_images(vi_image, ir_image, CFG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "#%% Blend images\n",
     "blend_im = blend_image(vi_image_w, ir_image_w, weight=.5)\n",
     "print(info(blend_im))\n",
@@ -78,11 +94,7 @@
     "print(info(false_im))\n",
     "\n",
     "#%% Show results\n",
-    "show_images((vi_image_w, ir_image_w, blend_im, false_im), labels=(\"VIS\", \"IR\", \"BLEND\", \"FALSE_COLOR\"))\n",
-    "\n",
-    "\n",
-    "#%% Show results\n",
-    "show_images(false_im, labels=\"FALSE_COLOR\")"
+    "show_images((vi_image_w, ir_image_w, blend_im, false_im), labels=(\"VIS\", \"IR\", \"BLEND\", \"FALSE_COLOR\"))"
    ]
   },
   {
@@ -95,46 +107,17 @@
    "source": [
     "#%% Save results\n",
     "\n",
-    "dst_dir = ir_path.parent / f\"false_color_results\"\n",
+    "dst_dir = ir_path.parent / f\"false_color\"\n",
     "dst_dir.mkdir(exist_ok=True)\n",
-    "print(f\"Save to {dst_dir}\")\n",
     "\n",
-    "# Blended images\n",
-    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_falsecolor.png\", false_im)\n",
-    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_blend.png\", blend_im)\n",
     "# Warped images\n",
     "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_vi_warp.png\", vi_image_w)\n",
-    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_ir_warp.png\", ir_image_w)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "''' Find features with edge detection '''\n",
+    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_ir_warp.png\", ir_image_w)\n",
     "\n",
-    "CFG['preprocess_images']['edge'] = 1\n",
-    "CFG['preprocess_images']['normalize'] = 1\n",
-    "CFG['preprocess_images']['blur_sigma'] = 2\n",
-    "CFG['preprocess_images']['equalize'] = 0\n",
-    "\n",
-    "#%% Warp images\n",
-    "vi_image_w, ir_image_w = warp_images(vi_image, ir_image, show=True, **CFG)\n",
-    "\n",
-    "#%% Blend images\n",
-    "blend_im = blend_image(vi_image_w, ir_image_w, weight=.5)\n",
-    "print(info(blend_im))\n",
-    "\n",
-    "#%% False color image\n",
-    "false_im = false_image(vi_image_w, ir_image_w)\n",
-    "print(info(false_im))\n",
-    "\n",
-    "#%% Show results\n",
-    "show_images((vi_image_w, ir_image_w, blend_im, false_im), labels=(\"VIS\", \"IR\", \"BLEND\", \"FALSE_COLOR\"))"
+    "# Blended images\n",
+    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_blend.png\", blend_im)\n",
+    "save_image(dst_dir / f\"{ir_path.stem}_{vi_path.stem}_falsecolor.png\", false_im)\n",
+    "\n"
    ]
   },
   {
